--- a/02/02.cbp
+++ b/02/02.cbp
@@ -8,7 +8,8 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="../lib" prefix_auto="1" extension_auto="1" />
-				<Option object_output="." />
+				<Option working_dir="./" />
+				<Option object_output="./" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
@@ -19,8 +20,9 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="lib02" prefix_auto="1" extension_auto="1" />
-				<Option object_output="/home/gabriel/Desarrollo/c/c-shared-object-library-example/02/.objs" />
+				<Option output="../lib" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="./" />
+				<Option object_output="./" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
