--- a/c-shared-object-library-example.cbp
+++ b/c-shared-object-library-example.cbp
@@ -8,7 +8,8 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="c-shared-object-library-example" prefix_auto="1" extension_auto="1" />
-				<Option object_output="." />
+				<Option working_dir="./" />
+				<Option object_output="./" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -20,7 +21,8 @@
 			</Target>
 			<Target title="Release">
 				<Option output="c-shared-object-library-example" prefix_auto="1" extension_auto="1" />
-				<Option object_output="/home/gabriel/Desarrollo/c/c-shared-object-library-example/.objs" />
+				<Option working_dir="./" />
+				<Option object_output="./" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -34,6 +36,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Linker>
+			<Add option="-ldl" />
+		</Linker>
 		<Unit filename="dlfcn.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
